Adding another award

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 					<br />
 					<img src="images/tripadvisor_2023.png" id="awardimage"
 						class="Thumbnail thumbnail thumb-featured-page" style="border: 5px solid #555;">
+					<img src="images/tripadvisor_top.png" id="awardimage"
+						class="Thumbnail thumbnail thumb-featured-page" style="border: 5px solid #555;">
 					<br /><br />
 					<h2>
 						Contact us directly to avail guaranteed 15% discounts on room rates.</br>
