--- a/index.html
+++ b/index.html
@@ -40,18 +40,24 @@
 				<br />
 				<div class="col-xs-2 col-md-2">
 					<h1>
-						You are now checking out one of the best rooms in Fort Kochi!
+						Discover one of the best rooms in Fort Kochi!
 					</h1>
 					<br />
-					<img src="images/tripadvisor_2023.png" id="awardimage"
+					<img src="images/tripadvisor_2024.jpg" id="awardimage"
 						class="Thumbnail thumbnail thumb-featured-page" style="border: 5px solid #555;">
 					<img src="images/tripadvisor_top.png" id="awardimage"
 						class="Thumbnail thumbnail thumb-featured-page" style="border: 5px solid #555;">
 					<br /><br />
 					<h2>
-						Contact us directly to avail guaranteed 15% discounts on room rates.</br>
-						Also offer special discounts for group bookings & for long-stay guests.
+						Exclusive Direct Booking Offers!</br>
 					</h2>
+					<h3>
+						<ul>
+							<li> - Min 15% discount on room rates.</li>
+							<li> - Special discounts for group bookings and long-stay guests.</li>
+							<li> - Complimentary breakfast included.</li>
+						</ul>
+					</h3>
 				</div>
 			</div>
 		</div>
@@ -366,11 +372,11 @@
 							src="images/hotels_combined.png" id="awardimage"
 							class="Thumbnail thumbnail thumb-featured-page"></a>
 					<!-- <img src="images/hotels_combined.png" id="awardimage" class="Thumbnail thumbnail thumb-featured-page"> -->
-					<img src="images/travel_myth.png" id="awardimage" class="Thumbnail thumbnail thumb-featured-page">
-					<a
+					<!-- <img src="images/travel_myth.png" id="awardimage" class="Thumbnail thumbnail thumb-featured-page"> -->
+					<!-- <a
 						href="https://keralablogexpress.com/season-6/one-day-in-kochi-kerala-best-things-to-do-in-kochi/"><img
 							src="images/kerela_blog.png" id="awardimage"
-							class="Thumbnail thumbnail thumb-featured-page" /></a>
+							class="Thumbnail thumbnail thumb-featured-page" /></a> -->
 				</div>
 			</div>
 		</div>
