Corrections and minor changes

--- a/booking-form.html
+++ b/booking-form.html
@@ -59,7 +59,7 @@
 				<nav id="menu-main">
 					<ul id="menu-main-menu" class="dropdown sf-js-enabled mobile-menu">
 						<!-- <li id="menu-item-271" class="menu-item menu-item-type-post_type  menu-item-object-page menu-item-has-children menu-item-271">
-								<a href="http://lalunehomes.com/rooms-rates">Rooms &#038; Rates
+								<a href="/rooms-rates">Rooms &#038; Rates
 									<span class="separator"></span>
 								</a>
 							</li> -->
@@ -114,7 +114,7 @@
 									</a>
 								</li>
 								<!-- <li id="menu-item-268" class="menu-item menu-item-type-post_type  menu-item-object-page menu-item-268">
-										<a href="http://lalunehomes.com/testimonials">Testimonials
+										<a href="/testimonials">Testimonials
 											<span class="separator"></span>
 										</a>
 									</li> -->
@@ -255,17 +255,17 @@
 				
 			<div class="hermes-column hermes-column-2">
 			<div class="widget widget_nav_menu" id="nav_menu-2">
-				<p class="title-widget title-s">Custom Menu Widget</p>
+				<p class="title-widget title-s">Menu</p>
 				<div class="menu-secondary-container">
 					<ul id="menu-secondary" class="menu">
 						<li id="menu-item-265" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-265">
-							<a href="http://lalunehomes.com/booking-form/photo-gallery">Photo Gallery</a>
+							<a href="/photo-gallery">Photo Gallery</a>
 						</li>
 						<li id="menu-item-263" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-263">
-							<a href="http://lalunehomes.com/booking-form/attractions">Attractions</a>
+							<a href="/photo-gallery/attractions.html">Attractions</a>
 						</li>
 						<li id="menu-item-264" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-264">
-							<a href="http://lalunehomes.com/booking-form/contact-us">Contact Us</a>
+							<a href="/contact-us.html">Contact Us</a>
 						</li>
 					</ul>
 				</div>
