--- a/photo-gallery/attractions.html
+++ b/photo-gallery/attractions.html
@@ -94,7 +94,7 @@
 						</li>
 						<li id="menu-item-266"
 							class="menu-item menu-item-type-post_type  menu-item-object-page menu-item-266">
-							<a href="attractions.html">Attractions
+							<a href="/photo-gallery/attractions.html">Attractions
 								<span class="separator"></span>
 							</a>
 						</li>
