--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	<div id="container">
 		<div id="banner">
 			<div id="banner-content">
-				<a href="contact-us.html">Contact us</a> directly and avail special discounts
+				<a href="/contact-us.html">Contact us</a> directly and avail special discounts
 			</div>
 		</div>
 		<div class="wrapper wrapper-header" style="padding-top: 37px;">
@@ -135,13 +135,13 @@
 					</li>
 					<li id="menu-item-261"
 						class="menu-item menu-item-type-post_type  menu-item-object-page menu-item-has-children menu-item-261">
-						<a href="contact-us.html">Contact Us
+						<a href="/contact-us.html">Contact Us
 							<span class="separator"></span>
 						</a>
 						<ul class="sub-menu">
 							<li id="menu-item-267"
 								class="menu-item menu-item-type-post_type  menu-item-object-page menu-item-267">
-								<a href="booking-form.html">Booking Form
+								<a href="/booking-form.html">Booking Form
 									<span class="separator"></span>
 								</a>
 							</li>
@@ -267,7 +267,7 @@
 								<span class="title-span">La Lune Bed & Breakfast</span>
 							</h1>
 							<span class="read-more">
-								<a href="booking-form.html" class="read-more-anchor">Contact Us</a>
+								<a href="/booking-form.html" class="read-more-anchor">Contact Us</a>
 							</span>
 							<p class="action-excerpt">La Lune Homes is located in the
 								<strong>Heart of Fort Kochi</strong> in an extremely characteristic, quite and lively
@@ -529,6 +529,9 @@
 								</li>
 								<li id="menu-item-264" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-264">
 									<a href="/contact-us.html">Contact Us</a>
+								</li>
+								<li id="menu-item-264" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-264">
+									<a href="/booking-form.html">Booking Request Form</a>
 								</li>
 							</ul>
 						</div>
