--- a/photo-gallery/attractions.html
+++ b/photo-gallery/attractions.html
@@ -100,13 +100,13 @@
 						</li>
 						<li id="menu-item-261"
 							class="menu-item menu-item-type-post_type  menu-item-object-page menu-item-has-children menu-item-261">
-							<a href="contact-us.html">Contact Us
+							<a href="/contact-us.html">Contact Us
 								<span class="separator"></span>
 							</a>
 							<ul class="sub-menu">
 								<li id="menu-item-267"
 									class="menu-item menu-item-type-post_type  menu-item-object-page menu-item-267">
-									<a href="booking-form.html">Booking Form
+									<a href="/booking-form.html">Booking Form
 										<span class="separator"></span>
 									</a>
 								</li>
@@ -445,6 +445,9 @@
 						</li>
 						<li id="menu-item-264" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-264">
 							<a href="/contact-us.html">Contact Us</a>
+						</li>
+						<li id="menu-item-264" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-264">
+							<a href="/booking-form.html">Booking Request Form</a>
 						</li>
 					</ul>
 				</div>
