--- a/booking-form.html
+++ b/booking-form.html
@@ -46,7 +46,7 @@
     <div id="container">
         		    <div id="banner">
                 <div id="banner-content">
-                    <a href="contact-us.html">Contact us</a> directly and avail special discounts
+                    <a href="/contact-us.html">Contact us</a> directly and avail special discounts
                 </div>
             </div>
 			<div class="wrapper wrapper-header" style="padding-top: 37px;">
@@ -103,13 +103,13 @@
 						</li>
 						<li id="menu-item-261"
 							class="menu-item menu-item-type-post_type  menu-item-object-page menu-item-has-children menu-item-261">
-							<a href="contact-us.html">Contact Us
+							<a href="/contact-us.html">Contact Us
 								<span class="separator"></span>
 							</a>
 							<ul class="sub-menu">
 								<li id="menu-item-267"
 									class="menu-item menu-item-type-post_type  menu-item-object-page menu-item-267">
-									<a href="booking-form.html">Booking Form
+									<a href="/booking-form.html">Booking Form
 										<span class="separator"></span>
 									</a>
 								</li>
@@ -266,6 +266,9 @@
 						</li>
 						<li id="menu-item-264" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-264">
 							<a href="/contact-us.html">Contact Us</a>
+						</li>
+						<li id="menu-item-264" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-264">
+							<a href="/booking-form.html">Booking Request Form</a>
 						</li>
 					</ul>
 				</div>
