added booking request form for more cta

--- a/booking-form.html
+++ b/booking-form.html
@@ -173,6 +173,12 @@
                                         <a href="mailto:laluneholidayhome@gmail.com">laluneholidayhome@gmail.com</a>
                                     </span>
                                 </li>
+                                <li class="hermes-contact">
+                                    <i class="fa fa-envelope-open"></i>
+                                    <span class="hermes-contact-value">
+                                        <a href="/booking-form.html">Booking Request Form</a>
+                                    </span>
+                                </li>
                                 <!-- .hermes-contact -->
                             </ul>
                             <!-- .hermes-contacts -->
@@ -225,6 +231,12 @@
 								/>
 								<span class="hermes-contact-value">
 									<a href="mailto:laluneholidayhome@gmail.com">laluneholidayhome@gmail.com</a>
+								</span>
+							</li>
+							<li class="hermes-contact">
+								<i class="fa fa-envelope-open-o"></i>
+								<span class="hermes-contact-value">
+									<a href="/booking-form.html">Booking Request Form</a>
 								</span>
 							</li>
                                                         <!-- .hermes-contact -->
