--- a/photo-gallery/backwaters.html
+++ b/photo-gallery/backwaters.html
@@ -275,6 +275,12 @@
                                         <a href="mailto:laluneholidayhome@gmail.com">laluneholidayhome@gmail.com</a>
                                     </span>
                                 </li>
+                                <li class="hermes-contact">
+                                    <i class="fa fa-envelope-open"></i>
+                                    <span class="hermes-contact-value">
+                                        <a href="/booking-form.html">Booking Request Form</a>
+                                    </span>
+                                </li>
                                 <!-- .hermes-contact -->
                             </ul>
                             <!-- .hermes-contacts -->
@@ -327,6 +333,12 @@
 								/>
 								<span class="hermes-contact-value">
 									<a href="mailto:laluneholidayhome@gmail.com">laluneholidayhome@gmail.com</a>
+								</span>
+							</li>
+							<li class="hermes-contact">
+								<i class="fa fa-envelope-open-o"></i>
+								<span class="hermes-contact-value">
+									<a href="/booking-form.html">Booking Request Form</a>
 								</span>
 							</li>
                                                         <!-- .hermes-contact -->
