--- a/photo-gallery/index.html
+++ b/photo-gallery/index.html
@@ -636,13 +636,19 @@
                                 <!-- .hermes-contact -->
                                 <li class="hermes-contact">
                                     <i class="fa fa-phone"></i>
-								<span class="hermes-contact-value"><a href"tel:+914842217856">+91-484-2217856</a>, <a href"tel:+919847919396">+91-9847919396</a> (<a href="https://api.whatsapp.com/send?phone=919847919396&amp;text=I'm%20interested%20in%20booking%20a%20vacation%20at%20your%20homes.">WhatsApp</a>)</span>
+									<span class="hermes-contact-value"><a href"tel:+914842217856">+91-484-2217856</a>, <a href"tel:+919847919396">+91-9847919396</a> (<a href="https://api.whatsapp.com/send?phone=919847919396&amp;text=I'm%20interested%20in%20booking%20a%20vacation%20at%20your%20homes.">WhatsApp</a>)</span>
                                 </li>
                                 <!-- .hermes-contact -->
                                 <li class="hermes-contact">
                                     <i class="fa fa-envelope"></i>
                                     <span class="hermes-contact-value">
                                         <a href="mailto:laluneholidayhome@gmail.com">laluneholidayhome@gmail.com</a>
+                                    </span>
+                                </li>
+                                <li class="hermes-contact">
+                                    <i class="fa fa-envelope-open"></i>
+                                    <span class="hermes-contact-value">
+                                        <a href="/booking-form.html">Booking Request Form</a>
                                     </span>
                                 </li>
                                 <!-- .hermes-contact -->
@@ -697,6 +703,12 @@
 								/>
 								<span class="hermes-contact-value">
 									<a href="mailto:laluneholidayhome@gmail.com">laluneholidayhome@gmail.com</a>
+								</span>
+							</li>
+							<li class="hermes-contact">
+								<i class="fa fa-envelope-open-o"></i>
+								<span class="hermes-contact-value">
+									<a href="/booking-form.html">Booking Request Form</a>
 								</span>
 							</li>
                                                         <!-- .hermes-contact -->
