Adding video of the premises minor

--- a/index.html
+++ b/index.html
@@ -407,9 +407,9 @@
 					
 					<p>
 						<center>
-						<h4>
-							Click <a href="" onclick="openVideoModal()">HERE!</a> to watch a video of the premises.
-						</h4>
+						<h2>
+							<a href="" onclick="openVideoModal()">Click HERE!</a> to watch a video of the premises.
+						</h2>
 						</center>
 					</p>
 					
