Adding Kayak badge as well

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 					<div class="modal-image-container">
 						<img src="images/tripadvisor_2025.png" id="awardimage"
 							class="Thumbnail thumbnail thumb-featured-page modal-image" style="border: 2px solid #555;">
+						<a href='https://www.kayak.com/Kochi-Hotels-La-Lune-Fort-Kochi.3595119.ksp' target='_blank'>
+							<img height='300' src='https://content.r9cdn.net/seo-res/badges/v5/LIGHT_LARGE_TRAVEL_AWARDS.png'/>
+						</a>
 						<img src="images/tripadvisor_top.jpeg" id="awardimage"
 							class="Thumbnail thumbnail thumb-featured-page modal-image" style="border: 2px solid #555;">
 					</div>
@@ -478,7 +481,7 @@
 							accomodations in Munnar, etc.
 						</li>
 						<li>
-							<strong>🧺 Laundry Services:</strong>We offer laundry services to our guests at an extra cost, ensuring convenience and cleanliness throughout your stay.
+							<strong>🧺 Laundry Services:</strong> We offer laundry services to our guests at an extra cost, ensuring convenience and cleanliness throughout your stay.
 						</li>
 						<li>
 							<strong>💃🏽 Bookings for shows:</strong> Bookings for shows such as Kathakali, Indian
