Reverting Kayak badge on modal

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 					<div class="modal-image-container">
 						<img src="images/tripadvisor_2025.png" id="awardimage"
 							class="Thumbnail thumbnail thumb-featured-page modal-image" style="border: 2px solid #555;">
-						<a href='https://www.kayak.com/Kochi-Hotels-La-Lune-Fort-Kochi.3595119.ksp' target='_blank'>
+						<!-- <a href='https://www.kayak.com/Kochi-Hotels-La-Lune-Fort-Kochi.3595119.ksp' target='_blank'>
 							<img height='300' src='https://content.r9cdn.net/seo-res/badges/v5/LIGHT_LARGE_TRAVEL_AWARDS.png'/>
-						</a>
+						</a> -->
 						<img src="images/tripadvisor_top.jpeg" id="awardimage"
 							class="Thumbnail thumbnail thumb-featured-page modal-image" style="border: 2px solid #555;">
 					</div>
