--- a/index.html
+++ b/index.html
@@ -36,23 +36,27 @@
 	<div class="modal" id="frontModal">
 		<div class="modal-content">
 			<div class="modal-body">
-				<span class="close-button" style="font-size: x-large;">×</span>
-				<br />
-				<div class="row">
-					<div class="col-xs-2 col-md-2">
-						<h1>
-							Discover one of the best rooms in Fort Kochi!
-						</h1>
-						<h2>
-							Exclusive Direct Booking Offers! <a href="/contact-us.html">Contact us</a></br>
-						</h2>
-					</div>
-				</div> <!-- .row -->
+				<div class="container">
+					<div class="row">
+						<div class="col-md-6 col-md-offset-3">
+							<h1>
+								Discover one of the best rooms in Fort Kochi!
+							</h1>
+							<h2>
+								Exclusive 15% Discount on Direct Booking! <a href="/contact-us.html">Contact us</a></br>
+							</h2>
+						</div>
+						<div class="col-md-1 col-md-offset-2">
+							<span class="close-button" style="font-size: x-large;">×</span>
+							<br />
+						</div>
+					</div> <!-- .row -->
+				</div> <!-- .container -->
 				<br />
 				<div class="container">
 				<div class="row">
 					<div class="modal-image-container">
-						<img src="images/tripadvisor_2025.png" id="awardimage"
+						<img src="images/tripadvisor_2025.jpeg" id="awardimage"
 							class="Thumbnail thumbnail thumb-featured-page modal-image" style="border: 2px solid #555;">
 						<!-- <a href='https://www.kayak.com/Kochi-Hotels-La-Lune-Fort-Kochi.3595119.ksp' target='_blank'>
 							<img height='300' src='https://content.r9cdn.net/seo-res/badges/v5/LIGHT_LARGE_TRAVEL_AWARDS.png'/>
@@ -71,7 +75,7 @@
 				<div class="col-xs-2 col-md-2">
 				<h3>
 					<ul>
-						<li> - Min 15% discount on room rates.</li>
+						<!-- <li> - Min 15% discount on room rates.</li> -->
 						<li> - Special discounts for group bookings and long-stay guests.</li>
 						<li> - Complimentary breakfast included.</li>
 					</ul>
